# audio_engineer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.claude/agents/: README.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: maintainer-issue.md
.github/maintainer/: config.yml
.github/skills/: README.md
.github/workflows/: ci.yml  docs.yml  maintainer.yml
docs/: ARCHITECTURE.md  MVP_PLAN.md  agents.md  api.md  architecture.md  changelog.md  cli.md  configuration.md  contributing.md  daw-integration.md  gemini.md  index.md  installation.md  mcp-server.md  music-theory.md  providers.md  quickstart.md
scripts/: generate_demo.py  generate_thrash.py  run_dev.py  setup_soundfont.py
src/audio_engineer/: __init__.py  mcp_server.py
tests/: conftest.py  test_gemini.py  test_maintainer_workflow.py
tests/agents/: test_bassist.py  test_drummer.py  test_guitarist.py  test_mixer.py  test_new_agents.py  test_orchestrator.py
tests/api/: test_app.py
tests/config/: test_settings_providers.py
tests/core/: test_audio_track.py  test_drum_rudiments.py  test_expanded_constants.py  test_expanded_patterns.py  test_genre_expansion.py  test_midi_engine.py  test_models.py  test_music_theory.py  test_patterns.py  test_progressions.py  test_track_composer.py
tests/daw/: test_backends.py  test_convert.py  test_export.py
tests/integration/: test_provider_registry_integration.py
(+59 files in other folders)
