[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-engineer"
version = "0.1.0"
description = "AI Music Studio - Multi-agent system for generating MIDI backing tracks"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
llm = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
audio = [
    "pydub>=0.25",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]
all = [
    "audio-engineer[llm,api,audio,dev,docs]",
]

[project.scripts]
audio-engineer-mcp = "audio_engineer.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_engineer"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
